<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <!-- Question number -->

    <TextView
        android:id="@+id/question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_side"
        android:layout_weight="0"
        android:text="1."
        android:textSize="@dimen/text_medium" />

    <!-- Did I text -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/did_i"
        android:textSize="@dimen/text_medium" />

    <!-- Edit text for adding habit -->

    <EditText
        android:id="@+id/habit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/enter_habit"
        android:textSize="@dimen/text_large" />

    <!-- Question -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/question_mark"
        android:textSize="@dimen/text_medium" />

</LinearLayout>