<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Indicator layout -->
    
    <LinearLayout
        android:id="@+id/linear_layout_indicators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indicator_margin_top"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image_view_indicator_1"
            android:layout_width="@dimen/indicator_size"
            android:layout_height="@dimen/indicator_size"
            android:layout_marginLeft="@dimen/indicator_spacing"
            android:src="@drawable/indicator_neutral_selected" />

        <ImageView
            android:id="@+id/image_view_indicator_2"
            android:layout_width="@dimen/indicator_size"
            android:layout_height="@dimen/indicator_size"
            android:layout_marginLeft="@dimen/indicator_spacing"
            android:src="@drawable/indicator_neutral" />

        <ImageView
            android:id="@+id/image_view_indicator_3"
            android:layout_width="@dimen/indicator_size"
            android:layout_height="@dimen/indicator_size"
            android:layout_marginLeft="@dimen/indicator_spacing"
            android:src="@drawable/indicator_neutral" />

        <ImageView
            android:id="@+id/image_view_indicator_4"
            android:layout_width="@dimen/indicator_size"
            android:layout_height="@dimen/indicator_size"
            android:layout_marginLeft="@dimen/indicator_spacing"
            android:src="@drawable/indicator_neutral" />

        <ImageView
            android:id="@+id/image_view_indicator_5"
            android:layout_width="@dimen/indicator_size"
            android:layout_height="@dimen/indicator_size"
            android:layout_marginLeft="@dimen/indicator_spacing"
            android:src="@drawable/indicator_neutral" />
    </LinearLayout>

    
    <!-- Question layout -->
    <RelativeLayout
        android:id="@+id/relative_layout_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/text_view_did_i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="120dp"
            android:text="@string/did_i"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/text_view_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_view_did_i"
            android:layout_alignBottom="@id/text_view_did_i"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:layout_toRightOf="@id/text_view_did_i"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_view_habit"
            android:layout_alignBottom="@id/text_view_habit"
            android:layout_toRightOf="@id/text_view_habit"
            android:text="@string/question_mark"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <!-- Yes/No button layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_question"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_yes"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1.0"
            android:background="@drawable/btn_positive_holo_light"
            android:text="@string/yes"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button_no"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1.0"
            android:background="@drawable/btn_negative_holo_light"
            android:text="@string/no"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    
    <Button 
        android:id="@+id/test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Launch edit activity"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>